# WebScraper

./: .gitignore  README.md  normalized_parks.json  parks.json  poetry.toml  pyproject.toml
parks/: cleanup.py  crawler.py
tests/: test_cleanup.py  test_crawler.py
