[tool.poetry]
name = "park-scraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "parks"}]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.1"
requests = "^2.28.1"
ipython = "^8.7.0"
pytest = "^7.2.0"
cssselect = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scrape-test = "parks.crawler:scrape_park_page"